removed and edited read me